--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "leaflet": "^1.9.3",
+    "firebase": "^9.20.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
